--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -1,10 +1,21 @@
-<mat-toolbar color='primary'>
-    <span>Menu</span>
-</mat-toolbar>
+<div class="content-container">
+    <mat-toolbar color='primary'>
+        <span>Menu</span>
+    </mat-toolbar>
 
-<mat-nav-list>
-    <a mat-list-item routerLink="/" (click)="closeSidenav.emit()">
-        <mat-icon>apps</mat-icon>
-        <span class='nav-caption'>Hello</span>
-    </a>
-</mat-nav-list>
+    <mat-nav-list>
+        <a mat-list-item routerLink="/" (click)="closeSidenav.emit()">
+            <mat-icon>apps</mat-icon>
+            <span class='nav-caption'>Hello</span>
+        </a>
+    </mat-nav-list>
+    <div class="bottom">
+        <mat-divider></mat-divider>
+        <mat-nav-list>
+            <a mat-list-item routerLink="/login" (click)="logout.emit()">
+                <mat-icon>exit_to_app</mat-icon>
+                <span class='nav-caption'>Logout</span>
+            </a>
+        </mat-nav-list>
+    </div>
+</div>
