--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,12 +13,12 @@
             </mat-form-field>
             <mat-form-field>
                 <input matInput formControlName="name" type="text" placeholder="name (optional)">
+                <mat-error *ngIf="error.name">{{error.name}}</mat-error>
             </mat-form-field>
             <mat-form-field>
                 <input matInput formControlName="password" type="password" placeholder="password">
                 <mat-error *ngIf="error.password">{{error.password}}</mat-error>
             </mat-form-field>
-
             <div *ngIf="serverErrors">
                 <mat-error *ngFor="let error of serverErrors.message.errors">{{error.msg}}</mat-error>
             </div>
