- add recovery - add forgot password - remove event bus - add snackbar

--- a/src/app/core/toolbar/toolbar.component.html
+++ b/src/app/core/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
         <mat-icon>menu</mat-icon>
     </button>
     <div class="profile" routerLink="/profile">
-        <span>{{name}}</span>
+        <span nasaUnderline>{{name}}</span>
         <img [src]="avatar">
     </div>
 </mat-toolbar>
