--- a/src/app/core/app-layout/app-layout.component.html
+++ b/src/app/core/app-layout/app-layout.component.html
@@ -1,6 +1,7 @@
 <mat-sidenav-container>
     <mat-sidenav #sidenav [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
-        <nasa-sidenav-content (closeSidenav)="closeIfHandset()" (logout)="logout()"></nasa-sidenav-content>
+        <nasa-sidenav-content [JWTPayload$]="JWTPayload$" (closeSidenav)="closeIfHandset()" (logout)="logout()">
+        </nasa-sidenav-content>
     </mat-sidenav>
     <mat-sidenav-content>
         <nasa-toolbar [isHandset$]="isHandset$" [profile$]="profile$" (toggleSidenav)="sidenav.toggle()"></nasa-toolbar>
