--- a/src/app/recovery/reset/reset.component.html
+++ b/src/app/recovery/reset/reset.component.html
@@ -1,3 +1,3 @@
 <mat-card class="reset-password">
-    <nasa-password-form [errors]="serverErrors" (onSubmit)="onSubmit($event)"></nasa-password-form>
+    <nasa-password-form [errors]="serverErrors" (submitForm)="onSubmit($event)"></nasa-password-form>
 </mat-card>
