--- a/src/app/shared/password-form/password-form.component.html
+++ b/src/app/shared/password-form/password-form.component.html
@@ -1,5 +1,5 @@
 <form fxLayout="column" fxLayoutAlign="center center" [formGroup]="passwordForm" spellcheck="false"
-    (ngSubmit)="onSubmit.emit(passwordForm.value)">
+    (ngSubmit)="submitForm.emit(passwordForm.value)">
     <mat-card-header>
         <mat-card-title>
             <h3>password</h3>
