--- a/src/app/shared/password-form/password-form.component.html
+++ b/src/app/shared/password-form/password-form.component.html
@@ -22,6 +22,7 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" type="submit" [disabled]="passwordForm.invalid">update</button>
+        <button mat-raised-button color="primary" type="submit"
+            [disabled]="passwordForm.invalid || disabled">update</button>
     </mat-card-actions>
 </form>
