docs(readme): Add docs
- add information about the project

--- a/src/app/recovery/forgot/forgot.component.html
+++ b/src/app/recovery/forgot/forgot.component.html
@@ -24,7 +24,7 @@
         <mat-card-actions>
             <div>
                 <button mat-raised-button color="primary" type="submit"
-                    [disabled]="forgotForm.invalid || processingForgot">send email {{processingForgot}}</button>
+                    [disabled]="forgotForm.invalid || processingForgot">send email</button>
             </div>
         </mat-card-actions>
     </form>
